--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ uvicorn==0.34.0
 python-dotenv==1.1.0
 requests==2.32.3
 pydantic==2.11.3
+sqlalchemy==2.0.40
+python-multipart==0.0.20
 pydantic-settings==2.8.1
 python-jose==3.4.0
